:bug: Fix modals not fitting on screen
The bottom of the modal cannot be seen and therefor cant be closed. This fixes the issue.
Fixes #418

:bug: Fix scrollbar

Latest updates dont show touch class anymore, therefor extend it with touchevents class to
show a special scrollbar

--- a/octoprint_touchui/static/less/touchui.bundled.less
+++ b/octoprint_touchui/static/less/touchui.bundled.less
@@ -508,18 +508,19 @@ pointer-events: none;
 }
 }
 }
-&.touch {
+&.touch,
+&.touchevents {
 .show-dropdown,
 #terminal-scroll {
 overflow-y: scroll !important;
 -webkit-overflow-scrolling: auto;
 }
-::-webkit-scrollbar {
+&::-webkit-scrollbar {
 width: 2px;
 height: 2px;
 background: transparent;
 }
-::-webkit-scrollbar-thumb {
+&::-webkit-scrollbar-thumb {
 background: @main-color;
 }
 body {
@@ -2689,6 +2690,7 @@ overflow: hidden;
 &.modal-open {
 position: fixed;
 width: 100%;
+height: 100%;
 overflow: hidden;
 }
 .modal-backdrop {
