--- a/source/less/components/modal.less
+++ b/source/less/components/modal.less
@@ -13,6 +13,7 @@
 &.modal-open {
 	position: fixed;
 	width: 100%;
+	height: 100%;
 	overflow: hidden;
 }
 
