--- a/source/less/components/scrollbars.less
+++ b/source/less/components/scrollbars.less
@@ -1,16 +1,18 @@
-&.touch {
+&.touch,
+&.touchevents {
 	.show-dropdown,
 	#terminal-scroll {
 		overflow-y: scroll !important;
 		-webkit-overflow-scrolling: auto;
 	}
 
-	::-webkit-scrollbar {
+	&::-webkit-scrollbar {
 		width: 2px;
 		height: 2px;
 		background: transparent;
 	}
-	::-webkit-scrollbar-thumb {
+
+	&::-webkit-scrollbar-thumb {
 		background: @main-color;
 	}
 
